--- a/templates/search.html
+++ b/templates/search.html
@@ -64,7 +64,10 @@
 </div>
 
 <div class="container">
-  <input class="form-control" type="text" name="search" id="search" placeholder=" Search #Hastag">  
+  <form action="/experts" method="POST">
+  <input class="form-control" type="text" name="hashtag" placeholder=" Search #Hastag">  
+  <input type="submit"> 
+  </form>
 </div>
 </div>
 
@@ -102,4 +105,3 @@
 }
 </style>
 </html>
-
