--- a/templates/search.html
+++ b/templates/search.html
@@ -2,57 +2,19 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Influencer - Twitter</title>
+  <title>Twenfluencer - Twitter</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <link href="asstes/css/style.css" rel="stylesheet">
 </head>
 <body class="influencer">
 
   <div id="page" class="hfeed site">
 	<a class="skip-link screen-reader-text" href="#content"></a>
-
-	<!--<header id="header" class="fixed-top header-scrolled" role="banner">-->
-		<!--<div class="header-wrap">-->
        <nav class="navbar navbar-inverse" style="height: 50px; background-color: #182430; border-color: #182430;">
-
-        <div class="u01-dtc-react__wrapper">
-          <div class="u01-dtc-react__header-item--left"> 
-          <span class="u01-dtc-react__twitter-logo">
-            <svg class="u01-dtc-react__twitter-logo-icon twtr-icon" height="30" id="space" viewBox="0 0 24 24" width="30" xmlns="http://www.w3.org/2000/svg">
-              <path d="M0 0h24v24H0z" opacity="0"></path>
-              <path d="M23.643 4.937c-.835.37-1.732.62-2.675.733.962-.576 1.7-1.49 2.048-2.578-.9.534-1.897.922-2.958 1.13-.85-.904-2.06-1.47-3.4-1.47-2.572 0-4.658 2.086-4.658 4.66 0 .364.042.718.12 1.06-3.873-.195-7.304-2.05-9.602-4.868-.4.69-.63 1.49-.63 2.342 0 1.616.823 3.043 2.072 3.878-.764-.025-1.482-.234-2.11-.583v.06c0 2.257 1.605 4.14 3.737 4.568-.392.106-.803.162-1.227.162-.3 0-.593-.028-.877-.082.593 1.85 2.313 3.198 4.352 3.234-1.595 1.25-3.604 1.995-5.786 1.995-.376 0-.747-.022-1.112-.065 2.062 1.323 4.51 2.093 7.14 2.093 8.57 0 13.255-7.098 13.255-13.254 0-.2-.005-.402-.014-.602.91-.658 1.7-1.477 2.323-2.41z" fill="#1D9BF0"></path></svg></span>
-              <span class="u01-dtc-react__root-page-title twtr-type--bold-24 twtr-color--white-neutral" style="position: relative; bottom: 5px; left: 5px;font-size: 30px;">Influencer</span>
-          </div>
-        </div>
   </nav>
-		<!--</div>-->
-	<!--</header> --><!-- #masthead -->
-
-
-	<div class="sydney-hero-area">
-		<?php sydney_slider_template(); ?>
-		<div class="header-image">
-		</div>
-  </div>
-</div>
-  <!--<div class="u01-dtc-react__wrapper">
-  <div class="u01-dtc-react__header-item--left"> 
-  <div>
-  <span class="u01-dtc-react__twitter-logo">
-    <svg class="u01-dtc-react__twitter-logo-icon twtr-icon" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
-      <path d="M0 0h24v24H0z" opacity="0"></path>
-      <path d="M23.643 4.937c-.835.37-1.732.62-2.675.733.962-.576 1.7-1.49 2.048-2.578-.9.534-1.897.922-2.958 1.13-.85-.904-2.06-1.47-3.4-1.47-2.572 0-4.658 2.086-4.658 4.66 0 .364.042.718.12 1.06-3.873-.195-7.304-2.05-9.602-4.868-.4.69-.63 1.49-.63 2.342 0 1.616.823 3.043 2.072 3.878-.764-.025-1.482-.234-2.11-.583v.06c0 2.257 1.605 4.14 3.737 4.568-.392.106-.803.162-1.227.162-.3 0-.593-.028-.877-.082.593 1.85 2.313 3.198 4.352 3.234-1.595 1.25-3.604 1.995-5.786 1.995-.376 0-.747-.022-1.112-.065 2.062 1.323 4.51 2.093 7.14 2.093 8.57 0 13.255-7.098 13.255-13.254 0-.2-.005-.402-.014-.602.91-.658 1.7-1.477 2.323-2.41z" fill="#1D9BF0"></path></svg></span>
-      <span class="u01-dtc-react__root-page-title twtr-type--bold-24 twtr-color--white-neutral">Developer</span>
-  </div>
-</div>
-
-      <div>
-       <div class="c01__wrapper  twtr-container  c01--nested-nav"    ></div>
-<p class="c01__eyebrow  twtr-type--bold-24  twtr-color--blue-light">Influencer</p>-->
 <div class="col-md-12">
 <div class="u01-dtc-react__wrapper" id="logo">
   <div class="u01-dtc-react__header-item--left"> 
@@ -62,23 +24,56 @@
       <path d="M23.643 4.937c-.835.37-1.732.62-2.675.733.962-.576 1.7-1.49 2.048-2.578-.9.534-1.897.922-2.958 1.13-.85-.904-2.06-1.47-3.4-1.47-2.572 0-4.658 2.086-4.658 4.66 0 .364.042.718.12 1.06-3.873-.195-7.304-2.05-9.602-4.868-.4.69-.63 1.49-.63 2.342 0 1.616.823 3.043 2.072 3.878-.764-.025-1.482-.234-2.11-.583v.06c0 2.257 1.605 4.14 3.737 4.568-.392.106-.803.162-1.227.162-.3 0-.593-.028-.877-.082.593 1.85 2.313 3.198 4.352 3.234-1.595 1.25-3.604 1.995-5.786 1.995-.376 0-.747-.022-1.112-.065 2.062 1.323 4.51 2.093 7.14 2.093 8.57 0 13.255-7.098 13.255-13.254 0-.2-.005-.402-.014-.602.91-.658 1.7-1.477 2.323-2.41z" fill="#1D9BF0"></path></svg></span>
   </div>
 </div>
-
+<h1 class="name" >Twenfluence</h1>
+<h3 style="color: azure; text-align: center;"> A place to see your influence </h3>
 <div class="container">
-  <form action="/experts" method="POST">
-  <input class="form-control" type="text" name="hashtag" placeholder=" Search #Hastag">  
-  <input type="submit"> 
-  </form>
+  <i class="fa fa-hashtag fa-2x" id="hashtag" ></i>
+  <input class="form-control" type="text"  name="search" id="search"  placeholder=" Search #Hastag"> 
+  <a type="button" class="btn btn-primary">Search</a>
 </div>
 </div>
+
 
 </body>
+
 <style>
+#hashtag
+{
+  left: 250px;
+    top: 36px;
+color: azure;
+position: relative;
+}
+
+.name
+{
+  position: relative;
+    color: azure;
+    text-align: center;
+    font-size: 50px;
+    top: -25px;
+    left:50px;
+    width: 1280px;
+}
+
+.btn-primary
+{
+  position: absolute;
+    top: 94.4%;
+    left: 66%;
+    font-size: 21px;
+    height: 46px;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
 #logo
 {
-  margin-left: auto;
-    margin-right: auto; 
-  width:200px;
-  height:200px;
+  position: relative;
+    top: 150px;
+    width: 200px;
+    left: 400px;
+    height: 200px;
+
 }
 
   .form-control{
@@ -105,3 +100,4 @@
 }
 </style>
 </html>
+
