--- a/templates/search.html
+++ b/templates/search.html
@@ -27,9 +27,10 @@
 <h1 class="name" >Twenfluence</h1>
 <h3 style="color: azure; text-align: center;"> A place to see your influence </h3>
 <div class="container">
+  <form action=/experts method="POST">
   <i class="fa fa-hashtag fa-2x" id="hashtag" ></i>
-  <input class="form-control" type="text"  name="search" id="search"  placeholder=" Search #Hastag"> 
-  <a type="button" class="btn btn-primary">Search</a>
+  <input class="form-control" type="text"  name="hashtag"  placeholder=" Search #Hastag"> 
+  <button type="submit" class="btn btn-primary">Search</button>
 </div>
 </div>
 
