--- a/templates/index.html
+++ b/templates/index.html
@@ -5,9 +5,12 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
+
+  
 
   <style>
     /* Remove the navbar's default margin-bottom and rounded borders */ 
@@ -23,6 +26,7 @@
       border-bottom: solid;
       border-color: #D6DCDB !important;
       border-width:1px;
+      padding-bottom: 15px
     }
 
     .row1 {
@@ -67,6 +71,7 @@
       word-wrap: break-word;
       hyphens: auto;
       height:100vh;
+      text-align:justify;
       }
 
     .columnheader
@@ -93,8 +98,24 @@
     .twtr-color--white-neutral {
       color: #fff;
     }
+    
 
-   
+
+    .form-control{
+      width:50%; 
+      margin-left: auto;
+      margin-right: auto; 
+      border-radius: 25px;
+      height: 35px;
+      display: inline-block;
+
+    }
+
+
+    .form-control::placeholder {
+      color:#C0C8CF;
+    }
+
 
   </style>
 </head>
@@ -113,12 +134,14 @@
 <div class="row-fluid text-center">    
   
     <div class="col-md-6 text-left"> 
-      <div class="row"><h2 class ="columnheader">Home</h2></div>
+      <div class="row"><h2 class ="columnheader">Home</h2><input class="form-control" type="text" name="hashtag" placeholder ="Search" ></div>
+        
+        
       <div class="row row1">
         <p class="wordspace">No recent Tweets.
           <br>New Tweets will appear here.Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
 
-Why do we use it?
+<br>Why do we use it?
 It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
 
 What is Lorem Ipsum?
@@ -162,7 +185,7 @@ It is a long established fact that a reader will be distracted by the readable c
 Why do we use it?
 It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).
 
-What is Lorem Ipsum?
+<br>What is Lorem Ipsum?
 Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
 
 Why do we use it?
