modify the search page

--- a/templates/search.html
+++ b/templates/search.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
@@ -15,17 +17,32 @@
 	<a class="skip-link screen-reader-text" href="#content"></a>
        <nav class="navbar navbar-inverse" style="height: 50px; background-color: #182430; border-color: #182430;">
   </nav>
+<div class="row">
+<!--  -->
 <div class="col-md-12">
-<div class="u01-dtc-react__wrapper" id="logo">
-  <div class="u01-dtc-react__header-item--left"> 
-  <span class="u01-dtc-react__twitter-logo">
-    <svg class="u01-dtc-react__twitter-logo-icon twtr-icon" height="150" viewBox="0 0 24 24" width="150" xmlns="http://www.w3.org/2000/svg">
-      <path d="M0 0h24v24H0z" opacity="0"></path>
-      <path d="M23.643 4.937c-.835.37-1.732.62-2.675.733.962-.576 1.7-1.49 2.048-2.578-.9.534-1.897.922-2.958 1.13-.85-.904-2.06-1.47-3.4-1.47-2.572 0-4.658 2.086-4.658 4.66 0 .364.042.718.12 1.06-3.873-.195-7.304-2.05-9.602-4.868-.4.69-.63 1.49-.63 2.342 0 1.616.823 3.043 2.072 3.878-.764-.025-1.482-.234-2.11-.583v.06c0 2.257 1.605 4.14 3.737 4.568-.392.106-.803.162-1.227.162-.3 0-.593-.028-.877-.082.593 1.85 2.313 3.198 4.352 3.234-1.595 1.25-3.604 1.995-5.786 1.995-.376 0-.747-.022-1.112-.065 2.062 1.323 4.51 2.093 7.14 2.093 8.57 0 13.255-7.098 13.255-13.254 0-.2-.005-.402-.014-.602.91-.658 1.7-1.477 2.323-2.41z" fill="#1D9BF0"></path></svg></span>
+  <div class="col-md-4">
+  </div>
+  <div class="col-md-1">
+    <div class="u01-dtc-react__wrapper">
+      <div class="u01-dtc-react__header-item--left"> 
+      <span class="u01-dtc-react__twitter-logo">
+        <svg class="u01-dtc-react__twitter-logo-icon twtr-icon" height="85" viewBox="0 0 24 24" width="85" xmlns="http://www.w3.org/2000/svg">
+          <path d="M0 0h24v24H0z" opacity="0"></path>
+          <path d="M23.643 4.937c-.835.37-1.732.62-2.675.733.962-.576 1.7-1.49 2.048-2.578-.9.534-1.897.922-2.958 1.13-.85-.904-2.06-1.47-3.4-1.47-2.572 0-4.658 2.086-4.658 4.66 0 .364.042.718.12 1.06-3.873-.195-7.304-2.05-9.602-4.868-.4.69-.63 1.49-.63 2.342 0 1.616.823 3.043 2.072 3.878-.764-.025-1.482-.234-2.11-.583v.06c0 2.257 1.605 4.14 3.737 4.568-.392.106-.803.162-1.227.162-.3 0-.593-.028-.877-.082.593 1.85 2.313 3.198 4.352 3.234-1.595 1.25-3.604 1.995-5.786 1.995-.376 0-.747-.022-1.112-.065 2.062 1.323 4.51 2.093 7.14 2.093 8.57 0 13.255-7.098 13.255-13.254 0-.2-.005-.402-.014-.602.91-.658 1.7-1.477 2.323-2.41z" fill="#1D9BF0"></path></svg></span>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-3">
+    <h1 class="name" >Twenfluence</h1>
   </div>
 </div>
-<h1 class="name" >Twenfluence</h1>
-<h3 style="color: azure; text-align: center;"> A place to see your influence </h3>
+<div class="col-md-12">
+  <h3 style="color: azure; text-align: center; margin: 2px;"> Find an Expert. Just for anything &#128521; </h3>
+</div>
+<div class="col-md-12">
+</div>
+
+
 <div class="container">
   <form action=/experts method="POST">
   <i class="fa fa-hashtag fa-2x" id="hashtag" ></i>
@@ -38,6 +55,10 @@
 </body>
 
 <style>
+*{
+  font-family: 'Roboto', sans-serif;
+}
+
 #hashtag
 {
   left: 250px;
@@ -50,22 +71,23 @@ position: relative;
 {
   position: relative;
     color: azure;
-    text-align: center;
+    /* text-align: center; */
     font-size: 50px;
-    top: -25px;
-    left:50px;
-    width: 1280px;
+    /* top: -25px; */
+    /* left:50px; */
+    /* width: 1280px; */
 }
 
 .btn-primary
 {
   position: absolute;
-    top: 94.4%;
-    left: 66%;
+    top: 53%;
+    left: 65%;
     font-size: 21px;
     height: 46px;
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
+  border-radius: 0% 38% 38% 0%;
 }
 #logo
 {
@@ -95,6 +117,7 @@ position: relative;
 }
  .influencer{
     background-color: #182430;
+    padding-top: 100px;
   }
 .twtr-color--white-neutral {
     color: #fff;
