--- a/templates/search.html
+++ b/templates/search.html
@@ -46,7 +46,7 @@
 <div class="container">
   <form action=/experts method="POST">
   <i class="fa fa-hashtag fa-2x" id="hashtag" ></i>
-  <input class="form-control" type="text"  name="hashtag"  placeholder=" Search #Hastag"> 
+  <input class="form-control" type="text"  name="hashtag"  placeholder=" Search #Hashtag"> 
   <button type="submit" class="btn btn-primary">Search</button>
 </div>
 </div>
