use costimised table

--- a/templates/index.html
+++ b/templates/index.html
@@ -146,21 +146,25 @@
       <div class="row row1">
         <!-- <p class="wordspace"> -->
             <div class="TI">
-                <table>
-                    <tr>
-                        <td> Rank </td>
-                        <td> Username </td>
-                        <td> No. of followers </td>
-                        <td> Total tweets with _hashtag_ </td>
-                        <td> Total Retweets </td>
-                        <td> Total Likes </td>
-                        <td> Influence Score for _hashtag_ </td>
-                    </tr>
-                    TI table
+                <table class="table table-striped">
+                    <thead>
+                      <tr>
+                          <th scope="col"> Rank </th>
+                          <th scope="col"> Username </th>
+                          <th scope="col"> No. of followers </th>
+                          <th scope="col"> Total tweets with _hashtag_ </th>
+                          <th scope="col"> Total Retweets </th>
+                          <th scope="col"> Total Likes </th>
+                          <th scope="col"> Influence Score for _hashtag_ </th>
+                      </tr>
+                      TI table
+                    </thead>
                 </table>
             </div>
         <!-- </p> -->
    </div>
+   <br>
+        <img src="./../img/output.png" alt="Graph">
   </div>
 </div>
 
